compiler/testData/diagnostics/tests/exposed/ea76264.kt
// StackOverflow
val p = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>::p<!>